extern/Hexapod/win_32/hxp_drivers.h

DLL int __stdcall PositionerMotionDoneSet (int SocketIndex, char * PositionerName, double PositionWindow, double VelocityWindow, double CheckingTime, double MeanPeriod, double TimeOut);  /* Update motion done parameters */
DLL int __stdcall PositionerSGammaExactVelocityAjustedDisplacementGet (int SocketIndex, char * PositionerName, double DesiredDisplacement, double * AdjustedDisplacement);  /* Return adjusted displacement to get exact velocity */
DLL int __stdcall PositionerSGammaParametersGet (int SocketIndex, char * PositionerName, double * Velocity, double * Acceleration, double * MinimumTjerkTime, double * MaximumTjerkTime);  /* Read dynamic parameters for one axe of a group for a future displacement  */
DLL int __stdcall PositionerSGammaParametersSet (int SocketIndex, char * PositionerName, double Velocity, double Acceleration, double MinimumTjerkTime, double MaximumTjerkTime);  /* Update dynamic parameters for one axe of a group for a future displacement */
DLL int __stdcall PositionerSGammaParametersDistanceGet (int SocketIndex, char * PositionerName, double Displacement, double Velocity, double Acceleration, double MinJerkTime, double MaxJerkTime, double * DisplacementDuringAcc, double * DisplacementDuringVel);  /* Returns distance during acceleration phase and distance during constant velocity phase  */
DLL int __stdcall PositionerSGammaPreviousMotionTimesGet (int SocketIndex, char * PositionerName, double * SettingTime, double * SettlingTime);  /* Read SettingTime and SettlingTime */
DLL int __stdcall PositionerStageParameterGet (int SocketIndex, char * PositionerName, char * ParameterName, char * ParameterValue);  /* Return the stage parameter */
DLL int __stdcall PositionerStageParameterSet (int SocketIndex, char * PositionerName, char * ParameterName, char * ParameterValue);  /* Save the stage parameter */
DLL int __stdcall PositionerUserTravelLimitsGet (int SocketIndex, char * PositionerName, double * UserMinimumTarget, double * UserMaximumTarget);  /* Read UserMinimumTarget and UserMaximumTarget */
DLL int __stdcall PositionerUserTravelLimitsSet (int SocketIndex, char * PositionerName, double UserMinimumTarget, double UserMaximumTarget);  /* Update UserMinimumTarget and UserMaximumTarget */
DLL int __stdcall HexapodMoveAbsolute (int SocketIndex, char * GroupName, char * CoordinateSystem, double X, double Y, double Z, double U, double V, double W);  /* Hexapod absolute move in a specific coordinate system */
DLL int __stdcall HexapodMoveIncremental (int SocketIndex, char * GroupName, char * CoordinateSystem, double dX, double dY, double dZ, double dU, double dV, double dW);  /* Hexapod incremental move in a specific coordinate system */
DLL int __stdcall HexapodCoordinatesGet (int SocketIndex, char * GroupName, char * CoordinateSystemIn, char * CoordinateSystemOut, double Xin, double Yin, double Zin, double Uin, double Vin, double Win, double * Xout, double * Yout, double * Zout, double * Uout, double * Vout, double * Wout);  /* Get coordinates in a specific coordinate system of a point specified in another coordinate system */
DLL int __stdcall HexapodCoordinateSystemSet (int SocketIndex, char * GroupName, char * CoordinateSystem, double X, double Y, double Z, double U, double V, double W);  /* Modify the position of a coordinate system */
DLL int __stdcall HexapodCoordinateSystemGet (int SocketIndex, char * GroupName, char * CoordinateSystem, double * X, double * Y, double * Z, double * U, double * V, double * W);  /* Get the position of a coordinate system */
DLL int __stdcall HexapodMoveIncrementalControl (int SocketIndex, char * GroupName, char * CoordinateSystem, char * HexapodTrajectoryType, double dX, double dY, double dZ);  /* Hexapod trajectory (Line, Arc or Rotation) execution with the maximum velocity  */
DLL int __stdcall HexapodMoveIncrementalControlWithTargetVelocity (int SocketIndex, char * GroupName, char * CoordinateSystem, char * HexapodTrajectoryType, double dX, double dY, double dZ, double Velocity);  /* Hexapod trajectory (Line, Arc or Rotation) execution with a target velocity  */
DLL int __stdcall HexapodMoveIncrementalControlPulseAndGatheringSet (int SocketIndex, char * GroupName, int Divisor);  /* Configure gathering with pulses : gathered data are X, Y, Z, U, V, W and pulses will be generated during only constant velocity */
DLL int __stdcall HexapodMoveIncrementalControlLimitGet (int SocketIndex, char * GroupName, char * CoordinateSystem, char * HexapodTrajectoryType, double dX, double dY, double dZ, double * MaximumVelocityCarriage, double * TrajectoryPercent);  /* Returns the maximum velocity of carriage and the percent of the trajectory executable */
DLL int __stdcall HexapodSGammaParametersDistanceGet (int SocketIndex, char * PositionerName, double Displacement, double Velocity, double Acceleration, double MinJerkTime, double MaxJerkTime, double * DisplacementDuringAcc, double * DisplacementDuringVel);  /* Returns distance during acceleration phase and distance during constant velocity phase for a virtual SGamma profiler */
DLL int __stdcall SingleAxisSlaveModeEnable (int SocketIndex, char * GroupName);  /* Enable the slave mode */
DLL int __stdcall SingleAxisSlaveModeDisable (int SocketIndex, char * GroupName);  /* Disable the slave mode */
DLL int __stdcall SingleAxisSlaveParametersSet (int SocketIndex, char * GroupName, char * PositionerName, double Ratio);  /* Set slave parameters */
DLL int __stdcall SingleAxisSlaveParametersGet (int SocketIndex, char * GroupName, char * PositionerName, double * Ratio);  /* Get slave parameters */
DLL int __stdcall OptionalModuleExecute (int SocketIndex, char * ModuleFileName, char * TaskName);  /* Execute an optional module */
DLL int __stdcall OptionalModuleKill (int SocketIndex, char * TaskName);  /* Kill an optional module */
DLL int __stdcall ControllerStatusGet (int SocketIndex, int * ControllerStatus);  /* Read controller current status */
DLL int __stdcall ControllerStatusStringGet (int SocketIndex, int ControllerStatusCode, char * ControllerStatusString);  /* Return the controller status string corresponding to the controller status code */
DLL int __stdcall EEPROMCIESet (int SocketIndex, int CardNumber, char * ReferenceString);  /* Set CIE EEPROM reference string */
DLL int __stdcall EEPROMDACOffsetCIESet (int SocketIndex, int PlugNumber, double DAC1Offset, double DAC2Offset);  /* Set CIE DAC offsets */
DLL int __stdcall EEPROMDriverSet (int SocketIndex, int PlugNumber, char * ReferenceString);  /* Set Driver EEPROM reference string */
DLL int __stdcall EEPROMINTSet (int SocketIndex, int CardNumber, char * ReferenceString);  /* Set INT EEPROM reference string */
DLL int __stdcall CPUCoreAndBoardSupplyVoltagesGet (int SocketIndex, double * VoltageCPUCore, double * SupplyVoltage1P5V, double * SupplyVoltage3P3V, double * SupplyVoltage5V, double * SupplyVoltage12V, double * SupplyVoltageM12V, double * SupplyVoltageM5V, double * SupplyVoltage5VSB);  /* Get power informations */
DLL int __stdcall CPUTemperatureAndFanSpeedGet (int SocketIndex, double * CPUTemperature, double * CPUFanSpeed);  /* Get CPU temperature and fan speed */
DLL int __stdcall RunTraceloggerProcessWithTimeSetting (int SocketIndex, int TraceloggerTime);  /* Run Tracelogger Process With Time Setting */
DLL int __stdcall RunTraceloggerProcessWithRollingBuffer (int SocketIndex);  /* Run Tracelogger Process With Rolling Buffer */
DLL int __stdcall CreateQNXEvent (int SocketIndex, int EventNumber, char * EventName);  /* Run Create Event */
DLL int __stdcall StartEventsAcqusition (int SocketIndex);  /* Start Events Acqusition */
DLL int __stdcall StopEventsAcqusition (int SocketIndex);  /* Stop Events Acqusition */
DLL int __stdcall EventTriggerSet (int SocketIndex);  /* Generate internal event */
DLL int __stdcall ActionListGet (int SocketIndex, char * ActionList);  /* Action list */
DLL int __stdcall ActionExtendedListGet (int SocketIndex, char * ActionList);  /* Action extended list */
DLL int __stdcall APIExtendedListGet (int SocketIndex, char * Method);  /* API method list */
DLL int __stdcall APIListGet (int SocketIndex, char * Method);  /* API method list without extended API */
DLL int __stdcall ErrorListGet (int SocketIndex, char * ErrorsList);  /* Error list */
DLL int __stdcall EventListGet (int SocketIndex, char * EventList);  /* General event list */
DLL int __stdcall GatheringListGet (int SocketIndex, char * list);  /* Gathering type list */
DLL int __stdcall GatheringExtendedListGet (int SocketIndex, char * list);  /* Gathering type extended list */
DLL int __stdcall GatheringExternalListGet (int SocketIndex, char * list);  /* External Gathering type list */
DLL int __stdcall GroupStatusListGet (int SocketIndex, char * GroupStatusList);  /* Group status list */