extern/Hexapod/win_32/hxp_drivers.bas

Declare Function PositionerMotionDoneSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal PositionWindow As Double, ByVal VelocityWindow As Double, ByVal CheckingTime As Double, ByVal MeanPeriod As Double, ByVal TimeOut As Double) As Integer '  Update motion done parameters
Declare Function PositionerSGammaExactVelocityAjustedDisplacementGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal DesiredDisplacement As Double, AdjustedDisplacement As Double) As Integer '  Return adjusted displacement to get exact velocity
Declare Function PositionerSGammaParametersGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, Velocity As Double, Acceleration As Double, MinimumTjerkTime As Double, MaximumTjerkTime As Double) As Integer '  Read dynamic parameters for one axe of a group for a future displacement 
Declare Function PositionerSGammaParametersSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal Velocity As Double, ByVal Acceleration As Double, ByVal MinimumTjerkTime As Double, ByVal MaximumTjerkTime As Double) As Integer '  Update dynamic parameters for one axe of a group for a future displacement
Declare Function PositionerSGammaParametersDistanceGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal Displacement As Double, ByVal Velocity As Double, ByVal Acceleration As Double, ByVal MinJerkTime As Double, ByVal MaxJerkTime As Double, DisplacementDuringAcc As Double, DisplacementDuringVel As Double) As Integer '  Returns distance during acceleration phase and distance during constant velocity phase 
Declare Function PositionerSGammaPreviousMotionTimesGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, SettingTime As Double, SettlingTime As Double) As Integer '  Read SettingTime and SettlingTime
Declare Function PositionerStageParameterGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ParameterName As String, ByVal ParameterValue As String) As Integer '  Return the stage parameter
Declare Function PositionerStageParameterSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ParameterName As String, ByVal ParameterValue As String) As Integer '  Save the stage parameter
Declare Function PositionerUserTravelLimitsGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, UserMinimumTarget As Double, UserMaximumTarget As Double) As Integer '  Read UserMinimumTarget and UserMaximumTarget
Declare Function PositionerUserTravelLimitsSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal UserMinimumTarget As Double, ByVal UserMaximumTarget As Double) As Integer '  Update UserMinimumTarget and UserMaximumTarget
Declare Function HexapodMoveAbsolute Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal CoordinateSystem As String, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal U As Double, ByVal V As Double, ByVal W As Double) As Integer '  Hexapod absolute move in a specific coordinate system
Declare Function HexapodMoveIncremental Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal CoordinateSystem As String, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal dU As Double, ByVal dV As Double, ByVal dW As Double) As Integer '  Hexapod incremental move in a specific coordinate system
Declare Function HexapodCoordinatesGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal CoordinateSystemIn As String, ByVal CoordinateSystemOut As String, ByVal Xin As Double, ByVal Yin As Double, ByVal Zin As Double, ByVal Uin As Double, ByVal Vin As Double, ByVal Win As Double, Xout As Double, Yout As Double, Zout As Double, Uout As Double, Vout As Double, Wout As Double) As Integer '  Get coordinates in a specific coordinate system of a point specified in another coordinate system
Declare Function HexapodCoordinateSystemSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal CoordinateSystem As String, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal U As Double, ByVal V As Double, ByVal W As Double) As Integer '  Modify the position of a coordinate system
Declare Function HexapodCoordinateSystemGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal CoordinateSystem As String, X As Double, Y As Double, Z As Double, U As Double, V As Double, W As Double) As Integer '  Get the position of a coordinate system
Declare Function HexapodMoveIncrementalControl Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal CoordinateSystem As String, ByVal HexapodTrajectoryType As String, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double) As Integer '  Hexapod trajectory (Line, Arc or Rotation) execution with the maximum velocity 
Declare Function HexapodMoveIncrementalControlWithTargetVelocity Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal CoordinateSystem As String, ByVal HexapodTrajectoryType As String, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, ByVal Velocity As Double) As Integer '  Hexapod trajectory (Line, Arc or Rotation) execution with a target velocity 
Declare Function HexapodMoveIncrementalControlPulseAndGatheringSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal Divisor As Integer) As Integer '  Configure gathering with pulses : gathered data are X, Y, Z, U, V, W and pulses will be generated during only constant velocity
Declare Function HexapodMoveIncrementalControlLimitGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal CoordinateSystem As String, ByVal HexapodTrajectoryType As String, ByVal dX As Double, ByVal dY As Double, ByVal dZ As Double, MaximumVelocityCarriage As Double, TrajectoryPercent As Double) As Integer '  Returns the maximum velocity of carriage and the percent of the trajectory executable
Declare Function HexapodSGammaParametersDistanceGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal Displacement As Double, ByVal Velocity As Double, ByVal Acceleration As Double, ByVal MinJerkTime As Double, ByVal MaxJerkTime As Double, DisplacementDuringAcc As Double, DisplacementDuringVel As Double) As Integer '  Returns distance during acceleration phase and distance during constant velocity phase for a virtual SGamma profiler
Declare Function SingleAxisSlaveModeEnable Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Enable the slave mode
Declare Function SingleAxisSlaveModeDisable Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Disable the slave mode
Declare Function SingleAxisSlaveParametersSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionerName As String, ByVal Ratio As Double) As Integer '  Set slave parameters
Declare Function SingleAxisSlaveParametersGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal PositionerName As String, Ratio As Double) As Integer '  Get slave parameters
Declare Function OptionalModuleExecute Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ModuleFileName As String, ByVal TaskName As String) As Integer '  Execute an optional module
Declare Function OptionalModuleKill Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal TaskName As String) As Integer '  Kill an optional module
Declare Function ControllerStatusGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ControllerStatus As Integer) As Integer '  Read controller current status
Declare Function ControllerStatusStringGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ControllerStatusCode As Integer, ByVal ControllerStatusString As String) As Integer '  Return the controller status string corresponding to the controller status code
Declare Function EEPROMCIESet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal CardNumber As Integer, ByVal ReferenceString As String) As Integer '  Set CIE EEPROM reference string
Declare Function EEPROMDACOffsetCIESet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PlugNumber As Integer, ByVal DAC1Offset As Double, ByVal DAC2Offset As Double) As Integer '  Set CIE DAC offsets
Declare Function EEPROMDriverSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PlugNumber As Integer, ByVal ReferenceString As String) As Integer '  Set Driver EEPROM reference string
Declare Function EEPROMINTSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal CardNumber As Integer, ByVal ReferenceString As String) As Integer '  Set INT EEPROM reference string
Declare Function CPUCoreAndBoardSupplyVoltagesGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, VoltageCPUCore As Double, SupplyVoltage1P5V As Double, SupplyVoltage3P3V As Double, SupplyVoltage5V As Double, SupplyVoltage12V As Double, SupplyVoltageM12V As Double, SupplyVoltageM5V As Double, SupplyVoltage5VSB As Double) As Integer '  Get power informations
Declare Function CPUTemperatureAndFanSpeedGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, CPUTemperature As Double, CPUFanSpeed As Double) As Integer '  Get CPU temperature and fan speed
Declare Function RunTraceloggerProcessWithTimeSetting Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal TraceloggerTime As Integer) As Integer '  Run Tracelogger Process With Time Setting
Declare Function RunTraceloggerProcessWithRollingBuffer Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Run Tracelogger Process With Rolling Buffer
Declare Function CreateQNXEvent Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal EventNumber As Integer, ByVal EventName As String) As Integer '  Run Create Event
Declare Function StartEventsAcqusition Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Start Events Acqusition
Declare Function StopEventsAcqusition Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Stop Events Acqusition
Declare Function EventTriggerSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Generate internal event
Declare Function ActionListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ActionList As String) As Integer '  Action list
Declare Function ActionExtendedListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ActionList As String) As Integer '  Action extended list
Declare Function APIExtendedListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal Method As String) As Integer '  API method list
Declare Function APIListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal Method As String) As Integer '  API method list without extended API
Declare Function ErrorListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ErrorsList As String) As Integer '  Error list
Declare Function EventListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal EventList As String) As Integer '  General event list
Declare Function GatheringListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Integer '  Gathering type list
Declare Function GatheringExtendedListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Integer '  Gathering type extended list
Declare Function GatheringExternalListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal list As String) As Integer '  External Gathering type list
Declare Function GroupStatusListGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupStatusList As String) As Integer '  Group status list
